--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.3.0"
   },
   "devDependencies": {
