--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.59.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
-    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.3.0",
     "yup": "^1.4.0"
   },
@@ -29,8 +29,10 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
