--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.16",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
+    "browser": "^0.2.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.0",
@@ -22,8 +24,10 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
     "redux-saga": "^1.3.0",
-    "routers": "^0.1.4",
+    "router": "^2.0.0",
+    "routers": "^0.1.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
